@@ -1,2 +1,7 @@
 # Currency-Converter
-A simple currency converter gui using standard rates and no API calls
+A simple currency converter gui using standard rates and no API calls.
+
+# To run
+Open a new terminal and run the following code:
+
+'java --module-path "C:\path\to\javafx-sdk-26\lib" --add-modules javafx.controls CurrencyConverter.java'
